# gym-hil-botyard

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  pyproject.toml
.github/workflows/: quality.yml  testing.yml
examples/: test_arrangeboxes.py  test_teleoperation.py
gym_franka/: __init__.py  mujoco_gym_env.py  viewer_wrapper.py
gym_franka/assets/: panda.xml  scene.xml
gym_franka/controllers/: __init__.py  opspace.py
gym_franka/envs/: __init__.py  panda_pick_gym_env.py
gym_franka/examples/: test_teleoperation.py
gym_franka/wrappers/: factory.py  hil_wrappers.py  intervention_utils.py  viewer_wrapper.py
gym_hil/: CONTROLLER_CONFIG.md  __init__.py  controller_config.json  mujoco_gym_env.py
gym_hil/assets/: botyard_hand_left.xml  panda_by.xml  scene_by.xml  ur16e.urdf  ur16e.xml  ur_dexhand.urdf  ur_dexhand.xml
gym_hil/controllers/: opspace.py
gym_hil/envs/: __init__.py  panda_pick_gym_env.py
gym_hil/examples/: test_teleoperation.py
gym_hil/wrappers/: factory.py  hil_wrappers.py  intervention_utils.py  viewer_wrapper.py
tests/: test_ee_action_wrapper.py  test_env.py  test_intervention_utils.py
