# Copyright 2024 The HuggingFace Inc. team. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project.urls]
homepage = "https://github.com/huggingface/gym-hil"
issues = "https://github.com/huggingface/gym-hil/issues"

[project]
name = "gym-hil"
version = "0.1.3"
description = "A gymnasium environment for Human-in-the-Loop Reinforcement Learning"
authors = [
  {name = "Khalil Meftah", email = "kmeftah.khalil@gmail.com"},
  {name = "Ke Wang", email = "superwk1017@gmail.com"},
  {name = "Adil Zouitine", email = "adilzouitinegm@gmail.com"},
  {name = "Michel Aractingi", email = "michel.aractingi@huggingface.co"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "mujoco>=2.3.7,<3.0.0",
    "gymnasium==0.29.1",
    "pygame>=2.5.1",
    "pynput>=1.7.7",
    "hidapi>=0.14.0",
    "dm-robotics-transformations>=0.9.0",
    "imageio[ffmpeg]>=2.34.0",
]

[project.optional-dependencies]
dev = ["pre-commit>=3.7.0", "debugpy>=1.8.1"]
test = ["pytest>=8.1.0", "pytest-cov>=5.0.0"]

[tool.poetry]
requires-poetry = ">=2.1"

[tool.ruff]
line-length = 110
target-version = "py310"
exclude = [
    "example.py",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "B", "C4", "SIM"]
ignore-init-module-imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
